--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
  	<title>Hello everyone! </title>
  </head>
  <body>
- <h1>Hello Coursera</h1>
+ <h1>Hello Coursera! This is my first HTML page</h1>
  </body>
  </html>
